add styles to other tables

--- a/SistemaDePagoDeAranceles/Pages/PersonInCharges/Edit.cshtml
+++ b/SistemaDePagoDeAranceles/Pages/PersonInCharges/Edit.cshtml
@@ -40,7 +40,7 @@
     </div>
     
     <div class="form-group">
-        <label>Direccion</label>
+        <label>Dirección</label>
         <input asp-for="Person.Address" class="form-control" required minlength="5" maxlength="50" />
         <span asp-validation-for="Person.Address" class="text-danger"></span>
     </div>
