--- a/SistemaDePagoDeAranceles/Pages/Categories/Index.cshtml
+++ b/SistemaDePagoDeAranceles/Pages/Categories/Index.cshtml
@@ -12,12 +12,12 @@
     <i class="bi bi-plus-circle"></i> Nueva Categoría
 </a>
 <table class="table table-striped">
-    <thead>
+    <thead class="table-primary">
     <tr>
         <th>Nombre</th>
         <th>Descripción</th>
         <th>Monto Base</th>
-        <th></th>
+        <th>Acciones</th>
     </tr>
     </thead>
     <tbody>
