spanishation of words

--- a/SistemaDePagoDeAranceles/Pages/Shared/_Layout.cshtml
+++ b/SistemaDePagoDeAranceles/Pages/Shared/_Layout.cshtml
@@ -47,13 +47,13 @@
 
                         <li class="nav-item">
                             <a class="nav-link active" asp-page="/Login">
-                                <i class="bi breadcrumb-item">Log In</i>
+                                <i class="bi breadcrumb-item">Inicio de Sesión</i>
                             </a>
                         </li>
 
                         <li class="nav-item">
                             <a class="nav-link active" asp-page="/Registrar">
-                                <i class="bi breadcrumb-item">Resgistro</i>
+                                <i class="bi breadcrumb-item">Registro</i>
                             </a>
                         </li>
 
