--- a/SistemaDePagoDeAranceles/Pages/Login.cshtml
+++ b/SistemaDePagoDeAranceles/Pages/Login.cshtml
@@ -4,25 +4,25 @@
     ViewData["Title"] = "Login";
 }
 
-<h1 class="mb-3">Login</h1>
+<h1 class="mb-3">Inicio de Sesión</h1>
 
 <form method="post">
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
     <div class="mb-3">
-        <label asp-for="Input.Username" class="form-label"></label>
+        <label asp-for="Input.Username" class="form-label">Nombre de usuario</label>
         <input asp-for="Input.Username" class="form-control" autocomplete="username" />
         <span asp-validation-for="Input.Username" class="text-danger"></span>
     </div>
     <div class="mb-3">
-        <label asp-for="Input.Password" class="form-label"></label>
+        <label asp-for="Input.Password" class="form-label">Contraseña</label>
         <input asp-for="Input.Password" class="form-control" autocomplete="current-password" />
         <span asp-validation-for="Input.Password" class="text-danger"></span>
     </div>
     <div class="form-check mb-3">
-        <input asp-for="Input.RememberMe" class="form-check-input" />
-        <label asp-for="Input.RememberMe" class="form-check-label"></label>
+        <input asp-for="Input.RememberMe" class="form-check-input"/>
+        <label asp-for="Input.RememberMe" class="form-check-label">Recuérdame</label>
     </div>
-    <button type="submit" class="btn btn-primary">Sign in</button>
+    <button type="submit" class="btn btn-primary">Ingresar</button>
 </form>
 
 @section Scripts {
