First login feature (#21)
* Session, Login, Log out, Register, with errors in program.cs

* Fix login and register

* Refactor pages and logic

* CRUD Functional

* Fix Deletes

* Refactor Services and Add User Pages

* Implement email Service

* Major service refactoring

* refactor de result (#19)

lol

* Solved something wrong with buttons

* ui fix

* user ui fix

* Fixed various view issues

* fix on validations Establishemnt

* spanglish corrected on Category

* hexgonal email refactor

* Revert "hexgonal email refactor"

This reverts commit aafde2b339d5e0c79497ea418d8e14d966978993.

* refactor for hexagonal

* Add first login feature

---------

Co-authored-by: Andre Cadima <andrecadimaschool@gmail.com>
Co-authored-by: FernandoGarcia19 <fernando.garcia@ucb.edu.bo>
Co-authored-by: jorge barahona <90215784+drakexcaptainop@users.noreply.github.com>
Co-authored-by: Focus0Wizard <jhonn.ramirez@ucb.edu.bo>

--- a/SistemaDePagoDeAranceles/Pages/PersonInCharges/Edit.cshtml
+++ b/SistemaDePagoDeAranceles/Pages/PersonInCharges/Edit.cshtml
@@ -23,7 +23,7 @@
     </div>
 
     <div class="form-group">
-        <label>Email</label>
+        <label>Correo</label>
         <input asp-for="Person.Email" class="form-control" type="email" maxlength="150" />
         <span asp-validation-for="Person.Email" class="text-danger"></span>
     </div>
