--- a/SistemaDePagoDeAranceles/Pages/PersonInCharges/Index.cshtml
+++ b/SistemaDePagoDeAranceles/Pages/PersonInCharges/Index.cshtml
@@ -3,38 +3,42 @@
 @{
     ViewData["Title"] = "Encargados";
 }
-
 <h1>Lista de Encargados</h1>
-
 <p>
     <a asp-page="Create" class="btn btn-primary">Nuevo Encargado</a>
 </p>
-
-<table class="table table-striped">
-    <thead>
-    <tr>
-        <th>Nombre</th>
-        <th>Correo</th>
-        <th>Teléfono</th>
-        <th>CI</th>
-        <th>Activo</th>
-        <th>Acciones</th>
-    </tr>
-    </thead>
-    <tbody>
-    @foreach (var p in Model.Persons)
-    {
+@if (Model.ResultGetAllPersonInCharge.IsFailure)
+{
+    <h2>No se encontraron registros</h2>
+}
+else
+{
+    <table class="table table-striped">
+        <thead>
         <tr>
-            <td>@p.FirstName @p.LastName</td>
-            <td>@p.Email</td>
-            <td>@p.Phone</td>
-            <td>@p.Ci</td>
-            <td>@(p.Status ? "Si" : "No")</td>
-            <td>
-                <a asp-page="Edit" asp-route-id="@(Model.Protect(p.Id))" class="btn btn-sm btn-outline-warning">Editar</a>
-                <a asp-page="Delete" asp-route-id="@(Model.Protect(p.Id))" class="btn btn-sm btn-outline-danger">Eliminar</a>
-            </td>
+            <th>Nombre</th>
+            <th>Correo</th>
+            <th>Teléfono</th>
+            <th>CI</th>
+            <th>Activo</th>
+            <th>Acciones</th>
         </tr>
-    }
-    </tbody>
-</table>
+        </thead>
+        <tbody>
+        @foreach (var p in Model.ResultGetAllPersonInCharge.Value.Where(p => p.Status))
+        {
+            <tr>
+                <td>@p.FirstName @p.LastName</td>
+                <td>@p.Email</td>
+                <td>@p.Phone</td>
+                <td>@p.Ci</td>
+                <td>@(p.Status ? "Si" : "No")</td>
+                <td>
+                    <a asp-page="Edit" asp-route-id="@(Model.Protect(p.Id))" class="btn btn-sm btn-outline-warning">Editar</a>
+                    <a asp-page="Delete" asp-route-id="@(Model.Protect(p.Id))" class="btn btn-sm btn-outline-danger">Eliminar</a>
+                </td>
+            </tr>
+        }
+        </tbody>
+    </table>
+}
