--- a/SistemaDePagoDeAranceles/Pages/Establishments/Index.cshtml
+++ b/SistemaDePagoDeAranceles/Pages/Establishments/Index.cshtml
@@ -1,56 +1,62 @@
 @page
+@using Org.BouncyCastle.Crypto.Engines
 @model SistemaDePagoDeAranceles.Pages.Establishments.IndexModel
 @{
     ViewData["Title"] = "Gestión de Establecimientos";
+    bool isAdmin = User?.IsInRole("Admin") == true;
+    bool isContador = User?.IsInRole("Contador") == true;
 }
 
 <h2 class="mb-4">@ViewData["Title"]</h2>
 
-<a asp-page="Create" class="btn btn-primary mb-3">
-    <i class="bi bi-plus-circle"></i> Nuevo Establecimiento
-</a>
+@if (isAdmin)
+{
+    <a asp-page="Create" class="btn btn-primary mb-3">
+        <i class="bi bi-plus-circle"></i> Nuevo Establecimiento
+    </a>
+}
+@if (Model.EstablishmentsGetAllResult.IsFailure)
+{
+    <h2 class="mb-4">@Model.EstablishmentsGetAllResult.Errors.FirstOrDefault()</h2>
+}
+else
+{
+    <form method="post" asp-page-handler="Search" class="space-y-2">
+        <input asp-for="SearchTerm"
+               class="form-control"
+               placeholder="Buscar Establecimientos por el Nombre" />
+        <button type="submit" class="btn btn-primary">Buscar</button>
+    </form>
 
-<form method="post" asp-page-handler="Search" class="space-y-2">
-    <input asp-for="SearchTerm"
-           class="form-control"
-           placeholder="Buscar Establecimientos por el Nombre" />
-    <button type="submit" class="btn btn-primary">Buscar</button>
-</form>
-
-<br>
-<table class="table table-hover align-middle">
-    <thead class="table-primary">
-    <tr>
-        <th>Nombre</th>
-        <th>NIT</th>
-        <th>Teléfono</th>
-        <th>Email</th>
-        <th>Tipo</th>
-    </tr>
-    </thead>
-    <tbody>
-    @if (Model.Establishments.Any())
-    {
-        @foreach (var e in Model.Establishments)
-        {
-            <tr>
-                <td>@e.Name</td>
-                <td>@e.TaxId</td>
-                <td>@e.Phone</td>
-                <td>@e.Email</td>
-                <td>@e.EstablishmentType</td>
-                <td>
-                    <a asp-page="Edit" asp-route-id="@(Model.Protect(e.Id))" class="btn btn-sm btn-outline-warning">Editar</a>
-                    <a asp-page="Delete" asp-route-id="@(Model.Protect(e.Id))" class="btn btn-sm btn-outline-danger">Eliminar</a>
-                </td>
-            </tr>
-        }
-    }
-    else
-    {
+    <br>
+    <table class="table table-hover align-middle">
+        <thead class="table-primary">
         <tr>
-            <td colspan="9" class="text-center text-muted">No hay establecimientos registrados.</td>
+            <th>Nombre</th>
+            <th>NIT</th>
+            <th>Teléfono</th>
+            <th>Correo</th>
+            <th>Tipo</th>
+            <th>Acciones</th>
         </tr>
-    }
-    </tbody>
-</table>
+        </thead>
+        <tbody>
+
+        @foreach (var e in Model.EstablishmentsGetAllResult.Value.Where(e => e.Status))
+            {
+                <tr>
+                    <td>@e.Name</td>
+                    <td>@e.TaxId</td>
+                    <td>@e.Phone</td>
+                    <td>@e.Email</td>
+                    <td>@e.EstablishmentType</td>
+                    <td>
+                        <a asp-page="Edit" asp-route-id="@(Model.Protect(e.Id))" class="btn btn-sm btn-outline-warning">Editar</a>
+                        <a asp-page="Delete" asp-route-id="@(Model.Protect(e.Id))" class="btn btn-sm btn-outline-danger">Eliminar</a>
+                    </td>
+                </tr>
+        }
+ 
+        </tbody>
+    </table>
+}
