--- a/SistemaDePagoDeAranceles/Pages/PersonInCharges/Create.cshtml
+++ b/SistemaDePagoDeAranceles/Pages/PersonInCharges/Create.cshtml
@@ -43,6 +43,12 @@
         <span asp-validation-for="Person.Address" class="text-danger"></span>
     </div>
 
+    <div class="form-group">
+        <label>Address</label>
+        <input asp-for="Person.Address" class="form-control" required minlength="5" maxlength="50" title="Address inválido. Sólo letras y números." />
+        <span asp-validation-for="Person.Address" class="text-danger"></span>
+    </div>
+
     <button type="submit" class="btn btn-success">Guardar</button>
     <a asp-page="Index" class="btn btn-secondary">Cancelar</a>
 </form>
