--- a/SistemaDePagoDeAranceles/Pages/Categories/Create.cshtml
+++ b/SistemaDePagoDeAranceles/Pages/Categories/Create.cshtml
@@ -15,13 +15,13 @@
     </div>
 
     <div class="mb-3">
-    <label asp-for="Category.Description" class="form-label">Descripcion</label>
+    <label asp-for="Category.Description" class="form-label">Descripción</label>
     <input asp-for="Category.Description" class="form-control" maxlength="1000" />
         <span asp-validation-for="Category.Description" class="text-danger"></span>
     </div>
 
     <div class="mb-3">
-    <label asp-for="Category.BaseAmount" class="form-label">Monto Base</label>
+    <label asp-for="Category.BaseAmount" class="form-label">Monto base</label>
     <input asp-for="Category.BaseAmount" class="form-control" type="number" step="0.01" required min="0" />
         <span asp-validation-for="Category.BaseAmount" class="text-danger"></span>
     </div>
